--- a/src/stylesheet/fonts.css
+++ b/src/stylesheet/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Circe-Regular";
+    font-family: "Circe";
     src: url('/src/assets/fonts/Circe-Regular/Сirce-Regular.eot');
      /* IE9 Compat Modes */
     src: url('/src/assets/fonts/Circe-Regular/Сirce-Regular.eot?#iefix') format('embedded-opentype'),
@@ -9,10 +9,11 @@
         url('/src/assets/fonts/Circe-Regular/Circe-Regular.ttf') format('truetype'),
          /* Safari, Android, iOS */
         url('/src/assets/fonts/Circe-Regular/Circe-Regular.svg') format('svg'); 
+        font-weight: 400;
 }
 
 @font-face {
-    font-family: "Circe-Bold";
+    font-family: "Circe";
     src: url('/src/assets/fonts/Circe-Bold/Сirce-Bold.eot');
     /* IE9 Compat Modes */
     src: url('/src/assets/fonts/Circe-Bold/Сirce-Bold.eot?#iefix') format('embedded-opentype'),
@@ -22,10 +23,11 @@
         url('/src/assets/fonts/Circe-Bold/Circe-Bold.ttf') format('truetype'),
         /* Safari, Android, iOS */
         url('/src/assets/fonts/Circe-Bold/Circe-Bold.svg') format('svg');
+        font-weight: 700;
 }
 
 @font-face {
-    font-family: "Poppins-Regular";
+    font-family: "Poppins";
     src: url('/src/assets/fonts/Poppins-Regular/Poppins-Regular.eot');
     /* IE9 Compat Modes */
     src: url('/src/assets/fonts/Poppins-Regular/Poppins-Regular.eot?#iefix') format('embedded-opentype'),
@@ -35,10 +37,11 @@
         url('/src/assets/fonts/Poppins-Regular/Poppins-Regular.ttf') format('truetype'),
         /* Safari, Android, iOS */
         url('/src/assets/fonts/Poppins-Regular/Poppins-Regular.svg') format('svg');
+        font-weight: 400;
 }
 
 @font-face {
-    font-family: "Poppins-Bold";
+    font-family: "Poppins";
     src: url('/src/assets/fonts/Poppins-Bold/Сirce-Bold.eot');
     /* IE9 Compat Modes */
     src: url('/src/assets/fonts/Poppins-Bold/Сirce-Bold.eot?#iefix') format('embedded-opentype'),
@@ -48,4 +51,9 @@
         url('/src/assets/fonts/Poppins-Bold/Circe-Bold.ttf') format('truetype'),
         /* Safari, Android, iOS */
         url('/src/assets/fonts/Poppins-Bold/Circe-Bold.svg') format('svg');
+        font-weight: 700;
+}
+
+.test123 {
+    font-size: 10px;
 }
